tests/compError/aliasDoesNotExist.ucl
// compError
// error: alias 'a' does not exist
// tests/compError/AliasDoesNotExist.ucl:5 -> here

a;